Added play2 and new table

--- a/shakespeare.css
+++ b/shakespeare.css
@@ -21,6 +21,23 @@ body {
 .basset { color: rgb(202, 227, 16); }
 .vernon { color: rgb(38, 38, 165); }
 .tablot { color: orange}
+.gloucester{color:violet}
+.of winchester {color:rgb(163, 25, 25)}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 table {
     border-collapse: collapse;
